plugins {
    id 'java'
    id "io.freefair.lombok" version "6.5.0"
}

group 'com.paytar2800'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
    maven {
        name "DynamoDB Local Release Repository"
        url "https://s3-us-west-2.amazonaws.com/dynamodb-local/release"
    }
}

configurations {
    dynamodb
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'

    implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.722')

    //Update dynamodb only after customDynamoDBMapper changes are not breaking
    implementation 'com.amazonaws:aws-java-sdk-dynamodb'
    implementation group: 'com.amazonaws', name: 'aws-lambda-java-log4j2', version: '1.1.0'
    //testImplementation group: 'com.amazonaws', name: 'DynamoDBLocal', version: '1.12.0'
    testImplementation group: 'com.almworks.sqlite4java', name: 'sqlite4java', version: '1.0.392'

    implementation group: 'com.google.code.gson', name: 'gson', version: '2.3.1'

    testImplementation group: 'com.amazonaws', name: 'DynamoDBLocal', version: '1.15.0'
    dynamodb fileTree (dir: 'lib', include: ["*.dylib", "*.so", "*.dll"])
    //dynamodb 'com.amazonaws:DynamoDBLocal:1.18.0'

    testImplementation 'io.github.ganadist.sqlite4java:libsqlite4java-osx-aarch64:1.0.392'
}


task copyNativeDeps(type: Copy) {
    from(configurations.compileClasspath + configurations.testCompileClasspath) {
        include '*.dll'
        include '*.dylib'
        include '*.so'
    }
    into './build/libs'
}

task copyNativeDeps2(type: Copy) {
    from configurations.dynamodb
    into "$project.buildDir/libs/"
}

test {
    //exclude '**/*'
    dependsOn copyNativeDeps, copyNativeDeps2
    systemProperty "java.library.path", 'build/libs'
}


task buildZip(type: Zip) {
    from compileJava
    from processResources
    into('lib') {
        from configurations.runtimeClasspath
    }
}


build.dependsOn buildZip
